--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         iframe {
             width: 100%;
-            height: 100%;
+            height: 100vh;
             margin: 0;
             padding: 0;
             border: none;
@@ -28,7 +28,7 @@
 
 <body>
 
-    <iframe src="Deepai.org" width="100%" height="100%"></iframe>
+    <iframe src="https://deepai.org/" width="100%" height="100%"></iframe>
 
 </body>
 
